<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/nurdin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/Text.Heading.Bold"
        android:id="@+id/TV_name"
        android:text="@string/nurdin"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        />

    <TextView
        style="@style/Text.MarginLeftRight"
        android:id="@+id/TV_email"
        android:text="@string/email"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_name"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_about_body_bg"
        app:layout_constraintTop_toBottomOf="@id/TV_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/TV_about_greeting"
            style="@style/Text.Heading.Bold"
            android:text="@string/greeting"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/LL_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/TV_about_detail_1"
            style="@style/Text.MarginLeftRight"
            android:text="@string/tech_desc_dummy"
            android:textColor="@color/muted_blue"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/LL_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/TV_about_detail_2"
            style="@style/Text.MarginLeftRight"
            android:text="@string/tech_desc_dummy"
            android:textColor="@color/muted_blue"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/LL_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/TV_about_detail_3"
            style="@style/Text.MarginLeftRight"
            android:text="@string/tech_desc_dummy"
            android:textColor="@color/muted_blue"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/LL_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>