<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"

    card_view:cardCornerRadius="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/muted_blue"
        android:padding="8dp">

        <ImageView
            android:id="@+id/IV_icon_about"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/about_icon"
            />

        <TextView
            android:id="@+id/about_main_head"
            style="@style/Text.Heading.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_main_header"
            android:textColor="@color/dark"
            android:textSize="16sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/IV_icon_about"
            card_view:layout_constraintTop_toTopOf="@id/IV_icon_about" />

        <TextView
            android:id="@+id/about_main_body"
            style="@style/Text.MarginLeftRight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/about_main_body"
            android:textColor="@color/dark"
            card_view:layout_constraintBottom_toBottomOf="@id/IV_icon_about"
            card_view:layout_constraintEnd_toEndOf="@id/about_main_head"
            card_view:layout_constraintStart_toEndOf="@+id/IV_icon_about"
            card_view:layout_constraintTop_toBottomOf="@id/about_main_head" />

        <Button
            android:id="@+id/about_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_btn"
            card_view:layout_constraintTop_toBottomOf="@id/IV_icon_about" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>