<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TechDetailActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:id="@+id/RL_tech_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            >
            <ImageView
                android:id="@+id/received_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                tools:src="@tools:sample/avatars"
                />
            <TextView
                android:id="@+id/received_title"
                style="@style/Text.Heading.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tech_title_dummy"
                android:layout_toEndOf="@id/received_icon"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            />

        <LinearLayout
            android:id="@+id/LL_tech_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_about_body_bg"
            android:layout_marginTop="8dp"
            >
            <TextView
                style="@style/Text.MarginLeftRight"
                android:id="@+id/received_description"
                android:text="@string/tech_desc_dummy"
                android:textColor="@color/dark"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>